kpathsea_src = files(
  'kpathsea/absolute.c',
  'kpathsea/atou.c',
  'kpathsea/cnf.c',
  'kpathsea/concat.c',
  'kpathsea/concat3.c',
  'kpathsea/concatn.c',
  'kpathsea/db.c',
  'kpathsea/debug.c',
  'kpathsea/dir.c',
  'kpathsea/elt-dirs.c',
  'kpathsea/expand.c',
  'kpathsea/extend-fname.c',
  'kpathsea/file-p.c',
  'kpathsea/find-suffix.c',
  'kpathsea/fn.c',
  'kpathsea/fontmap.c',
  'kpathsea/hash.c',
  'kpathsea/kdefault.c',
  'kpathsea/kpathsea.c',
  'kpathsea/line.c',
  'kpathsea/magstep.c',
  'kpathsea/make-suffix.c',
  'kpathsea/path-elt.c',
  'kpathsea/pathsearch.c',
  'kpathsea/proginit.c',
  'kpathsea/progname.c',
  'kpathsea/readable.c',
  'kpathsea/rm-suffix.c',
  'kpathsea/str-list.c',
  'kpathsea/str-llist.c',
  'kpathsea/tex-file.c',
  'kpathsea/tex-glyph.c',
  'kpathsea/tex-hush.c',
  'kpathsea/tex-make.c',
  'kpathsea/tilde.c',
  'kpathsea/uppercasify.c',
  'kpathsea/variable.c',
  'kpathsea/version.c',
  'kpathsea/xbasename.c',
  'kpathsea/xcalloc.c',
  'kpathsea/xdirname.c',
  'kpathsea/xfopen.c',
  'kpathsea/xfseek.c',
  'kpathsea/xfseeko.c',
  'kpathsea/xftell.c',
  'kpathsea/xftello.c',
  'kpathsea/xgetcwd.c',
  'kpathsea/xmalloc.c',
  'kpathsea/xopendir.c',
  'kpathsea/xputenv.c',
  'kpathsea/xrealloc.c',
  'kpathsea/xstat.c',
  'kpathsea/xstrdup.c',
)

kpathsea_lib = static_library(
  'kpathsea',
  sources: kpathsea_src,
  include_directories: mmtex_inc,
  c_args: '-DMAKE_KPSE_DLL',
)

kpathsea_dep = declare_dependency(
  link_with: kpathsea_lib,
  include_directories: include_directories([
    '.',
    'kpathsea',
  ]),
)
