kpathsea_src = files(
  'src/absolute.c',
  'src/atou.c',
  'src/cnf.c',
  'src/concat.c',
  'src/concat3.c',
  'src/concatn.c',
  'src/db.c',
  'src/debug.c',
  'src/dir.c',
  'src/elt-dirs.c',
  'src/expand.c',
  'src/extend-fname.c',
  'src/file-p.c',
  'src/find-suffix.c',
  'src/fn.c',
  'src/fontmap.c',
  'src/hash.c',
  'src/kdefault.c',
  'src/kpathsea.c',
  'src/line.c',
  'src/magstep.c',
  'src/make-suffix.c',
  'src/path-elt.c',
  'src/pathsearch.c',
  'src/proginit.c',
  'src/progname.c',
  'src/readable.c',
  'src/rm-suffix.c',
  'src/str-list.c',
  'src/str-llist.c',
  'src/tex-file.c',
  'src/tex-glyph.c',
  'src/tex-hush.c',
  'src/tex-make.c',
  'src/tilde.c',
  'src/uppercasify.c',
  'src/variable.c',
  'src/version.c',
  'src/xbasename.c',
  'src/xcalloc.c',
  'src/xdirname.c',
  'src/xfopen.c',
  'src/xfseek.c',
  'src/xfseeko.c',
  'src/xftell.c',
  'src/xftello.c',
  'src/xgetcwd.c',
  'src/xmalloc.c',
  'src/xopendir.c',
  'src/xputenv.c',
  'src/xrealloc.c',
  'src/xstat.c',
  'src/xstrdup.c',
)

kpathsea_lib = static_library(
  'kpathsea',
  sources: kpathsea_src,
  include_directories: mmtex_inc,
  c_args: '-DMAKE_KPSE_DLL',
)

kpathsea_dep = declare_dependency(
  link_with: kpathsea_lib,
  include_directories: include_directories([
    'kpathsea',
  ]),
)
