luatex_src = files(
  'src/luafilesystem/src/lfs.c',
  'src/luamd5/md5.c',
  'src/luamd5/md5lib.c',
  'src/luapeg/lpeg.c',
  'src/luazip/src/luazip.c',
  'src/luazlib/lgzip.c',
  'src/luazlib/lzlib.c',
  'src/slnunicode/slnunico.c',
  'src/luasocket/src/auxiliar.c',
  'src/luasocket/src/buffer.c',
  'src/luasocket/src/compat.c',
  'src/luasocket/src/except.c',
  'src/luasocket/src/inet.c',
  'src/luasocket/src/io.c',
  'src/luasocket/src/lua_preload.c',
  'src/luasocket/src/luasocket.c',
  'src/luasocket/src/mime.c',
  'src/luasocket/src/options.c',
  'src/luasocket/src/select.c',
  'src/luasocket/src/serial.c',
  'src/luasocket/src/socket.c',
  'src/luasocket/src/tcp.c',
  'src/luasocket/src/timeout.c',
  'src/luasocket/src/udp.c',
  'src/unilib/alphabet.c',
  'src/unilib/ArabicForms.c',
  'src/unilib/char.c',
  'src/unilib/cjk.c',
  'src/unilib/gwwiconv.c',
  'src/unilib/ucharmap.c',
  'src/unilib/unialt.c',
  'src/unilib/usprintf.c',
  'src/unilib/ustring.c',
  'src/unilib/utype.c',
  'src/luafontloader/fontforge/fontforge/autohint.c',
  'src/luafontloader/fontforge/fontforge/clipnoui.c',
  'src/luafontloader/fontforge/fontforge/cvundoes.c',
  'src/luafontloader/fontforge/fontforge/dumppfa.c',
  'src/luafontloader/fontforge/fontforge/encoding.c',
  'src/luafontloader/fontforge/fontforge/featurefile.c',
  'src/luafontloader/fontforge/fontforge/fontviewbase.c',
  'src/luafontloader/fontforge/fontforge/fvcomposit.c',
  'src/luafontloader/fontforge/fontforge/fvfonts.c',
  'src/luafontloader/fontforge/fontforge/lookups.c',
  'src/luafontloader/fontforge/fontforge/macbinary.c',
  'src/luafontloader/fontforge/fontforge/macenc.c',
  'src/luafontloader/fontforge/fontforge/mathconstants.c',
  'src/luafontloader/fontforge/fontforge/memory.c',
  'src/luafontloader/fontforge/fontforge/mm.c',
  'src/luafontloader/fontforge/fontforge/namelist.c',
  'src/luafontloader/fontforge/fontforge/noprefs.c',
  'src/luafontloader/fontforge/fontforge/nouiutil.c',
  'src/luafontloader/fontforge/fontforge/parsepfa.c',
  'src/luafontloader/fontforge/fontforge/parsettf.c',
  'src/luafontloader/fontforge/fontforge/parsettfatt.c',
  'src/luafontloader/fontforge/fontforge/psread.c',
  'src/luafontloader/fontforge/fontforge/pua.c',
  'src/luafontloader/fontforge/fontforge/python.c',
  'src/luafontloader/fontforge/fontforge/sfd1.c',
  'src/luafontloader/fontforge/fontforge/splinechar.c',
  'src/luafontloader/fontforge/fontforge/splinefill.c',
  'src/luafontloader/fontforge/fontforge/splinefont.c',
  'src/luafontloader/fontforge/fontforge/splineorder2.c',
  'src/luafontloader/fontforge/fontforge/splineoverlap.c',
  'src/luafontloader/fontforge/fontforge/splinerefigure.c',
  'src/luafontloader/fontforge/fontforge/splinesave.c',
  'src/luafontloader/fontforge/fontforge/splinesaveafm.c',
  'src/luafontloader/fontforge/fontforge/splinestroke.c',
  'src/luafontloader/fontforge/fontforge/splineutil.c',
  'src/luafontloader/fontforge/fontforge/splineutil2.c',
  'src/luafontloader/fontforge/fontforge/start.c',
  'src/luafontloader/fontforge/fontforge/stemdb.c',
  'src/luafontloader/fontforge/fontforge/tottf.c',
  'src/luafontloader/fontforge/fontforge/tottfgpos.c',
  'src/luafontloader/fontforge/fontforge/ttfspecial.c',
  'src/luafontloader/fontforge/gutils/fsys.c',
  'src/lua/lstrlibext.c',
  'src/lua/helpers.c',
  'src/lua/texluac.c',
  'src/utils/utils.c',
  'src/lua/luastuff.c',
  'src/lua/luainit.c',
  'src/tex/printing.c',
  'src/luafontloader/src/ffdummies.c',
  'src/luafontloader/src/luafflib.c',
  'src/dvi/dvigen.c',
  'src/font/dofont.c',
  'src/font/luafont.c',
  'src/font/mapfile.c',
  'src/font/pkin.c',
  'src/font/sfnt.c',
  'src/font/texfont.c',
  'src/font/tfmofm.c',
  'src/font/tounicode.c',
  'src/font/tt_glyf.c',
  'src/font/tt_table.c',
  'src/font/vfovf.c',
  'src/font/vfpacket.c',
  'src/font/writecff.c',
  'src/font/writeenc.c',
  'src/font/writefont.c',
  'src/font/writet1.c',
  'src/font/writet3.c',
  'src/font/writettf.c',
  'src/font/writetype0.c',
  'src/font/writetype2.c',
  'src/image/pdftoepdf.c',
  'src/image/writeimg.c',
  'src/image/writejbig2.c',
  'src/image/writejp2.c',
  'src/image/writejpg.c',
  'src/image/writepng.c',
  'src/lang/hnjalloc.c',
  'src/lang/hyphen.c',
  'src/lang/texlang.c',
  'src/lua/lcallbacklib.c',
  'src/lua/lfontlib.c',
  'src/lua/limglib.c',
  'src/lua/lpdfelib.c',
  'src/lua/lpdfscannerlib.c',
  'src/lua/lkpselib.c',
  'src/lua/llanglib.c',
  'src/lua/llualib.c',
  'src/lua/lnodelib.c',
  'src/lua/liolibext.c',
  'src/lua/loslibext.c',
  'src/lua/lpdflib.c',
  'src/lua/lstatslib.c',
  'src/lua/ltexiolib.c',
  'src/lua/ltexlib.c',
  'src/lua/lnewtokenlib.c',
  'src/lua/luatex-core.c',
  'src/lua/helpers.c',
  'src/lua/luanode.c',
  'src/lua/luatoken.c',
  'src/lua/mplibstuff.c',
  'src/pdf/pdfaction.c',
  'src/pdf/pdfannot.c',
  'src/pdf/pdfcolorstack.c',
  'src/pdf/pdfdest.c',
  'src/pdf/pdffont.c',
  'src/pdf/pdfgen.c',
  'src/pdf/pdfglyph.c',
  'src/pdf/pdfimage.c',
  'src/pdf/pdflink.c',
  'src/pdf/pdflistout.c',
  'src/pdf/pdfliteral.c',
  'src/pdf/pdfobj.c',
  'src/pdf/pdfoutline.c',
  'src/pdf/pdfpage.c',
  'src/pdf/pdfpagetree.c',
  'src/pdf/pdfrule.c',
  'src/pdf/pdfsaverestore.c',
  'src/pdf/pdfsetmatrix.c',
  'src/pdf/pdfshipout.c',
  'src/pdf/pdftables.c',
  'src/pdf/pdfthread.c',
  'src/pdf/pdfxform.c',
  'src/tex/backend.c',
  'src/tex/align.c',
  'src/tex/arithmetic.c',
  'src/tex/buildpage.c',
  'src/tex/commands.c',
  'src/tex/conditional.c',
  'src/tex/directions.c',
  'src/tex/dumpdata.c',
  'src/tex/equivalents.c',
  'src/tex/errors.c',
  'src/tex/expand.c',
  'src/tex/extensions.c',
  'src/tex/filename.c',
  'src/tex/inputstack.c',
  'src/tex/linebreak.c',
  'src/tex/mainbody.c',
  'src/tex/maincontrol.c',
  'src/tex/mathcodes.c',
  'src/tex/memoryword.c',
  'src/tex/mlist.c',
  'src/tex/nesting.c',
  'src/tex/packaging.c',
  'src/tex/postlinebreak.c',
  'src/tex/primitive.c',
  'src/tex/scanning.c',
  'src/tex/stringpool.c',
  'src/tex/texdeffont.c',
  'src/tex/texfileio.c',
  'src/tex/texmath.c',
  'src/tex/texnodes.c',
  'src/tex/textcodes.c',
  'src/tex/textoken.c',
  'src/utils/avl.c',
  'src/utils/avlstuff.c',
  'src/utils/managed-sa.c',
  'src/utils/unistring.c',
  '../synctex/src/synctex.c',
  'src/luaffi/call.c',
  'src/luaffi/ctype.c',
  'src/luaffi/ffi.c',
  'src/luaffi/parser.c',
  'src/luatex.c',
  '../mplibdir/src/lmplib.c',
  '../libmd5/src/md5.c',
)

luatex_inc = include_directories(
  'src/unilib',
  'src',
  'src/luafontloader/fontforge/inc',
  'src/luafontloader/fontforge/fontforge',
  '../libmd5',
  '../synctex',
)


cc = meson.get_compiler('c')

luatex_dependencies = [
  cc.find_library('m', required: false),
  cc.find_library('dl', required: false),
  dependency('libpng'),
  dependency('zlib'),
  dependency('zziplib'),
  lua_dep,
  mplib_dep,
  pplib_dep,
  kpathsea_dep,
  w2c_dep,
]

luatex_c_args = [
  '-DLUASOCKET_DEBUG',
  '-DLUA_FF_LIB',
  '-D_NO_PYTHON',
  '-DX_DISPLAY_MISSING',
  '-DUSE_OUR_MEMORY',
  '-DSYNCTEX_ENGINE_H=<synctex-luatex.h>',
]

executable(
  'mmluatex',
  sources: luatex_src,
  include_directories: [luatex_inc, mmtex_inc],
  dependencies: luatex_dependencies,
  c_args: luatex_c_args,
  install: true,
)
